gloc-macro/tests/ui/fail/mode_b_no_state_fields.stderr
error: No state type found for this reactor.

       Provide one of:
       • `#[reactor(state = MyStateType)]`  — use an existing State type (Mode A)
       • `#[state] field: Type` inside the struct  — let gloc generate the State (Mode B)
 --> tests/ui/fail/mode_b_no_state_fields.rs:5:8
  |
5 | struct NoStateReactor {
  |        ^^^^^^^^^^^^^^
